# hse-homework-cpp

hw_01/: Makefile  README.md
hw_01/include/: bmp.h
hw_01/src/: bmp.c  main.c
hw_02/: CMakeLists.txt  Makefile
hw_02/include/: Board.hpp  BoardTest.hpp  StdioBoardView.hpp  Test.hpp
hw_02/src/: Board.cpp  StdioBoardView.cpp  main.cpp
hw_02/test/: BoardTest.cpp  Test.cpp  test1.cpp
hw_03/: .gitignore  CMakeLists.txt  Makefile  README.md
hw_03/include/: CLI.hpp  Huffman.hpp  HuffmanArchiver.hpp
hw_03/src/: CLI.cpp  Huffman.cpp  HuffmanArchiver.cpp  main.cpp
hw_03/test/: TestMain.cpp  TestMain.hpp  doctest.h  testCLI.cpp  testHuffman.cpp  testHuffmanArchiver.cpp
lab_01/correct/: lab1
lab_01/correct/src/: main.c  util.c
lab_01/multiple/src/: algorithm.c  io.c
lab_01/unresolved/: Makefile
lab_01/unresolved/src/: io.c  main.c
lab_02/: Makefile
lab_02/include/: str.h  test_str.h
lab_02/src/: str.c  test.c  test_str.c
lab_03/: Makefile
lab_03/include/: clist.h
lab_03/src/: clist.c  main.c
lab_04/: Makefile
lab_04/include/: mergesort.h
lab_04/src/: main.c  mergesort.c
lab_05/: Makefile
lab_05/include/: clist.h  point_list.h
lab_05/samples/: test.txt
lab_05/src/: clist.c  main.c  point_list.c
lab_11/: Makefile
lab_11/include/: bin_manip.h  employees.h
lab_11/src/: bin_manip.cpp  employees.cpp  main.cpp
lab_14/: CMakeLists.txt  Makefile
lab_14/include/: matrix.hpp
lab_14/src/: main.cpp  matrix.cpp
lab_15/: CMakeLists.txt
lab_15/include/: linq.hpp
lab_15/src/: minimal_smoke_test.cpp
